[gd_scene load_steps=4 format=3 uid="uid://dyqgt6khk244r"]

[ext_resource type="Script" path="res://Scripts/confirm_dialog.gd" id="1_ulpvw"]
[ext_resource type="Theme" uid="uid://c2xsywtxro80x" path="res://Themes/button.tres" id="1_yhfgx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqi58"]
bg_color = Color(0.113725, 0.164706, 0.223529, 0.905882)

[node name="ConfirmDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -67.0
offset_right = 90.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oqi58")
script = ExtResource("1_ulpvw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DialogTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme = ExtResource("1_yhfgx")
theme_type_variation = &"TooltipLabel"
theme_override_font_sizes/font_size = 23
text = "TITLE"
horizontal_alignment = 1

[node name="DialogContent" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme = ExtResource("1_yhfgx")
theme_type_variation = &"TooltipLabel"
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "CONTENT"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="YesButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_yhfgx")
theme_override_font_sizes/font_size = 20
text = "YES"
autowrap_mode = 3

[node name="NoButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_yhfgx")
theme_override_font_sizes/font_size = 20
text = "NO"
autowrap_mode = 3
